--- a/AA2_P2P/AA2_P2P.vcxproj
+++ b/AA2_P2P/AA2_P2P.vcxproj
@@ -120,6 +120,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="scoreboard.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chronometer.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="scoreboard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
